--- a/Interactive-Web/clone/css/main.css
+++ b/Interactive-Web/clone/css/main.css
@@ -20,12 +20,24 @@ a {
   /* 하이퍼링크 줄 없애기 */
   text-decoration: none;
 }
-
+/* global-nav와 local-nav가 자체 heigth를 가지고 있기 때문에
+main.js에서 scrollLoop에 약간의 오차가 발생
+-> position: absolute로 활용 */
 .global-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 44px;
+  padding: 0 1rem;
 }
 .local-nav {
+  position: absolute;
+  top: 45px;
+  left: 0;
+  width: 100%;
   height: 52px;
+  padding: 0 1rem;
   border-bottom: 1px solid #ddd;
 }
 .global-nav-links,
@@ -55,6 +67,7 @@ a {
 }
 
 .scroll-section {
+  border: 3px solid red;
   padding-top: 50vh;
 }
 /* scroll-section 0 */
@@ -137,7 +150,6 @@ a {
   height: 7rem;
   color: white;
   background: darkorange;
-  margin-top: 50vh;
 }
 /* sticky-elem */
 .sticky-elem {
