--- a/Todo-list/index.css
+++ b/Todo-list/index.css
@@ -56,7 +56,7 @@ body {
   margin-bottom: 15px;
 }
 
-.js-toDoForm input {
+input {
   margin: 10px 0 10px 0;
   border: none;
   border-bottom: 3px solid black;
@@ -66,7 +66,7 @@ body {
   outline-style: none;
 }
 
-.js-toDoForm input::placeholder {
+input::placeholder {
   color: gainsboro;
   font-size: 1rem;
   font-weight: bold;
